<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/text_enteremail"
            android:inputType="textEmailAddress" 
            android:text="" >
			
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/text_enterpass"
            android:inputType="textPassword" 
            android:text="" />

        <Button
            android:id="@+id/but_login"
            android:layout_width="230dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_default"
            android:layout_gravity="center_horizontal"
            android:text="@string/but_enter" />

        <Button
            android:id="@+id/but_loginvk"
            android:layout_width="230dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_default"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/but_entervk" />

    </LinearLayout>
    

</ScrollView>
