<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LauncherActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/blogmain" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_appmaininfo" />

            <Button
                android:id="@+id/but_login"
                android:layout_width="200dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/but_enter" />

            <Button
                android:id="@+id/but_register"
                android:layout_width="200dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/but_register" />
        </LinearLayout>

    </ScrollView>